# Multimodal-Clinical-Decision-Platform

./: .gitignore  LICENSE.txt  README.md  SHA256SUMS.txt  build_thesis.py  create_demo_dataset.py  extract_form_data.py  labs_means.json  test_input_no_cxr.json  test_symile_inference.py
backend/: .env.example  _smoke_test.py  auth.py  backfill_symile.py  batch_infer.py  database.py  download_urls.txt  find_study_urls.py  generate_demo_cases.py  main.py  migrate_to_supabase.py  rename_downloads.py  requirements.txt  schemas.py  seed_audit_log.py  seed_auth_users.py  seed_demo_users.py  test_upload.py  trim_to_40.py
symile-main/symile-main/: .gitignore  LICENSE  README.md  pyproject.toml
symile-main/symile-main/examples/: binary_xor.py  binary_xor_missing.py
symile-main/symile-main/experiments/: README.md  args.py  constants.py  datasets.py  losses.py  main.py  pyproject.toml  test.py  utils.py
symile-main/symile-main/experiments/data_processing/binary_xor/: informations.py
symile-main/symile-main/experiments/data_processing/symile_m3/: README.md  add_missingness.py  args.py  constants.py  cv_processing.py  generate_data.py  generate_translations.py  max_token_len.py  merge_representations.py  save_representations.py  split_df.py
symile-main/symile-main/experiments/data_processing/symile_mimic/: README.md  args.py  constants.py  create_dataset_splits.py  process_mimic_data.py
symile-main/symile-main/experiments/models/: binary_xor_model.py  symile_m3_model.py  symile_mimic_model.py
symile-main/symile-main/symile/: __init__.py  loss.py  similarity.py
(+116 files in other folders)
